fix: hide desktop header on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -249,7 +249,7 @@ img {
 
 @media (max-width: 900px) {
   .header {
-    height: 50px;
+    display: none !important;
   }
   .logo {
     gap: 8px;
